--- a/ManageSystem/.classpath
+++ b/ManageSystem/.classpath
@@ -19,17 +19,22 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
+	<classpathentry exported="true" kind="lib" path="D:/Eclipse_jar/javax.servlet.jsp.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/Eclipse_jar/javax.servlet.jsp.jstl.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/Eclipse_jar/javax.servlet.jsp.jstl-api.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/Eclipse_jar/javax.servlet.jsp-api.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/Eclipse_jar/javax.servlet-api.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/Eclipse_jar/jstl-1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/Eclipse_jar/mysql-connector-java-8.0.12.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/Eclipse_jar/javax/javax.transaction-api.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/Eclipse_jar/javax/javax.websocket-api.jar"/>
+	<classpathentry kind="lib" path="D:/Eclipse_jar/javax/javax.ws.rs-api.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Eclipse_jar/javax.servlet.jsp.jar"/>
-	<classpathentry kind="lib" path="D:/Eclipse_jar/javax.servlet.jsp.jstl.jar"/>
-	<classpathentry kind="lib" path="D:/Eclipse_jar/javax.servlet.jsp.jstl-api.jar"/>
-	<classpathentry kind="lib" path="D:/Eclipse_jar/javax.servlet.jsp-api.jar"/>
-	<classpathentry kind="lib" path="D:/Eclipse_jar/javax.servlet-api.jar"/>
-	<classpathentry kind="lib" path="D:/Eclipse_jar/jstl-1.2.jar"/>
-	<classpathentry kind="lib" path="D:/Eclipse_jar/mysql-connector-java-8.0.12.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
