--- a/ManageSystem/src/main/webapp/WEB-INF/web.xml
+++ b/ManageSystem/src/main/webapp/WEB-INF/web.xml
@@ -7,12 +7,251 @@
 	
   <display-name>Archetype Created Web Application</display-name>
 
+	<servlet>
+		<servlet-name>login</servlet-name>
+		<servlet-class>com.system.servlet.LoginServlet</servlet-class>
+	</servlet> 
+	
+  	<servlet>
+		<servlet-name>logout</servlet-name>
+		<servlet-class>com.system.servlet.LogoutServlet</servlet-class>
+	</servlet>
+	
+	<servlet>
+		<servlet-name>browerEmp</servlet-name>
+		<servlet-class>com.system.servlet.BrowerEmpServlet</servlet-class>
+	</servlet>
+	
+	<servlet>
+		<servlet-name>AddEmp</servlet-name>
+		<servlet-class>com.system.servlet.AddEmpServlet</servlet-class>
+	</servlet>
+	
+	<servlet>
+		<servlet-name>updataEmp</servlet-name>
+		<servlet-class>com.system.servlet.updataEmpServlet</servlet-class>
+	</servlet>
+	 
+	<servlet>
+		<servlet-name>delEmp</servlet-name>
+		<servlet-class>com.system.servlet.DelEmpServlet</servlet-class>
+	</servlet>
+	
+	 <servlet>
+		<servlet-name>ToUpdataEmp</servlet-name>
+		<servlet-class>com.system.servlet.ToUpdataEmpServlet</servlet-class>
+	</servlet>
+	 
+	 <servlet>
+		<servlet-name>SelectSearch</servlet-name>
+		<servlet-class>com.system.servlet.SelectSearchServlet</servlet-class>
+	</servlet>
+	 
+	 <servlet>
+		<servlet-name>UpdataEmployee</servlet-name>
+		<servlet-class>com.system.servlet.UpdataEmpServlet</servlet-class>
+	</servlet>
+	 
+	 <servlet>
+		<servlet-name>DepartSelectSearch</servlet-name>
+		<servlet-class>com.system.servlet.DepartSelectSearchServlet</servlet-class>
+	</servlet>
+	 
+	 <servlet>
+		<servlet-name>BrowerDepServlet</servlet-name>
+		<servlet-class>com.system.servlet.BrowerDepServlet</servlet-class>
+	</servlet>
+	 
+	 <servlet>
+		<servlet-name>SreachDepServlet</servlet-name>
+		<servlet-class>com.system.servlet.SelectSearchDepServlet</servlet-class>
+	</servlet>
+	 
+	 <servlet>
+		<servlet-name>AddDep</servlet-name>
+		<servlet-class>com.system.servlet.AddDepServlet</servlet-class>
+	</servlet>
+
+	  <servlet>
+		<servlet-name>FindByEmpServer</servlet-name>
+		<servlet-class>com.system.servlet.FindByEmpServer</servlet-class>
+	  </servlet>
+	  
+	  <servlet>
+		<servlet-name>UpdataDepServlet</servlet-name>
+		<servlet-class>com.system.servlet.UpdataDepServlet</servlet-class>
+	  </servlet>
+	  
+	  <servlet>
+		<servlet-name>DeleteDepServlet</servlet-name>
+		<servlet-class>com.system.servlet.DeleteDepServlet</servlet-class>
+	  </servlet>
+	  
+	  <servlet>
+		<servlet-name>DelDepServlet</servlet-name>
+		<servlet-class>com.system.servlet.DelDepServlet</servlet-class>
+	  </servlet>
+	  
+	  <servlet>
+		<servlet-name>ToUpdataDepServlet</servlet-name>
+		<servlet-class>com.system.servlet.ToUpdataDepServlet</servlet-class>
+	  </servlet>
+	  
+	  <servlet>
+		<servlet-name>BrowerAdminServlet</servlet-name>
+		<servlet-class>com.system.servlet.BrowerAdminServlet</servlet-class>
+	  </servlet>
+	  
+	  <servlet>
+		<servlet-name>DelAdminServlet</servlet-name>
+		<servlet-class>com.system.servlet.DelAdminServlet</servlet-class>
+	  </servlet>
+	  
+	  <servlet>
+		<servlet-name>AddAdminServlet</servlet-name>
+		<servlet-class>com.system.servlet.AddAdminServlet</servlet-class>
+	  </servlet>
+	  
+	  <servlet>
+		<servlet-name>UpdataAdminServlet</servlet-name>
+		<servlet-class>com.system.servlet.UpdataAdminServlet</servlet-class>
+	  </servlet>
+
+
+	<servlet-mapping>
+		<servlet-name>AddDep</servlet-name>
+		<url-pattern>/department/addDep</url-pattern>
+	</servlet-mapping> 
+	
+	<servlet-mapping>
+		<servlet-name>SreachDepServlet</servlet-name>
+		<url-pattern>/department/DepartselectSearch</url-pattern>
+	</servlet-mapping> 
+	
+	<servlet-mapping>
+		<servlet-name>BrowerDepServlet</servlet-name>
+		<url-pattern>/employee/BrowerDepServlet</url-pattern>
+	</servlet-mapping> 
+	
+	<servlet-mapping>
+		<servlet-name>DepartSelectSearch</servlet-name>
+		<url-pattern>/employee/DepartselectSearch</url-pattern>
+	</servlet-mapping> 
+	 
+	<servlet-mapping>
+		<servlet-name>UpdataEmployee</servlet-name>
+		<url-pattern>/employee/updataEmployee</url-pattern>
+	</servlet-mapping> 
+	
+	<servlet-mapping>
+		<servlet-name>SelectSearch</servlet-name>
+		<url-pattern>/employee/selectSearch</url-pattern>
+	</servlet-mapping> 
+	
+	<servlet-mapping>
+		<servlet-name>ToUpdataEmp</servlet-name>
+		<url-pattern>/employee/toupdateEmp</url-pattern>
+	</servlet-mapping> 
+	 
+	<servlet-mapping>
+		<servlet-name>delEmp</servlet-name>
+		<url-pattern>/employee/delEmp</url-pattern>
+	</servlet-mapping>
+	 
+	 <servlet-mapping>
+		<servlet-name>updataEmp</servlet-name>
+		<url-pattern>/employee/updateEmp</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>AddEmp</servlet-name>
+		<url-pattern>/employee/addEmp</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>browerEmp</servlet-name>
+		<url-pattern>/employee/browerEmpInfo</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>login</servlet-name>
+		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>logout</servlet-name>
+		<url-pattern>/logout</url-pattern>
+	</servlet-mapping>
+
+  <servlet-mapping>
+	<servlet-name>FindByEmpServer</servlet-name>
+	<url-pattern>/servlet/FindByEmpServer</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+	<servlet-name>UpdataDepServlet</servlet-name>
+	<url-pattern>/UpdataDepServlet</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+	<servlet-name>DeleteDepServlet</servlet-name>
+	<url-pattern>/DeleteDepServlet</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+	<servlet-name>DelDepServlet</servlet-name>
+	<url-pattern>/DelDepServlet</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+	<servlet-name>ToUpdataDepServlet</servlet-name>
+	<url-pattern>/ToUpdataDepServlet</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+	<servlet-name>BrowerAdminServlet</servlet-name>
+	<url-pattern>/employee/BrowerAdminServlet</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+	<servlet-name>DelAdminServlet</servlet-name>
+	<url-pattern>/DelAdminServlet</url-pattern>
+  </servlet-mapping>
+	  
+  <servlet-mapping>
+	<servlet-name>AddAdminServlet</servlet-name>
+	<url-pattern>/admin/AddAdminServlet</url-pattern>
+  </servlet-mapping>
+	  
+  <servlet-mapping>
+	<servlet-name>UpdataAdminServlet</servlet-name>
+	<url-pattern>/admin/UpdataAdminServlet</url-pattern>
+  </servlet-mapping>
 
   <welcome-file-list>
   <welcome-file>login.jsp</welcome-file>
   </welcome-file-list>
 
-
+<!--
+   <filter>   
+          <filter-name>right</filter-name>  
+          <filter-class>com.school.employee.util.PageFilter</filter-class>  
+      </filter>  
+   
+     
+       <filter-mapping>  
+          <filter-name>right</filter-name>  
+          <url-pattern>/employee/*</url-pattern>  
+      </filter-mapping>  
+      <filter-mapping>  
+          <filter-name>right</filter-name>  
+          <url-pattern>/department/*</url-pattern>  
+      </filter-mapping>
+      <filter-mapping>  
+          <filter-name>right</filter-name>  
+          <url-pattern>/admin/*</url-pattern>  
+      </filter-mapping>
+-->
+	
 </web-app>
 
 
