update junit test

--- a/ManageSystem/src/main/webapp/WEB-INF/web.xml
+++ b/ManageSystem/src/main/webapp/WEB-INF/web.xml
@@ -214,7 +214,7 @@
   
   <servlet-mapping>
 	<servlet-name>DelAdminServlet</servlet-name>
-	<url-pattern>/DelAdminServlet</url-pattern>
+	<url-pattern>/employee/DelAdminServlet</url-pattern>
   </servlet-mapping>
 	  
   <servlet-mapping>
