--- a/ManageSystem/.classpath
+++ b/ManageSystem/.classpath
@@ -36,5 +36,11 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="D:/Eclipse_jar/easymock-3.2/easymock-3.2.jar"/>
+	<classpathentry kind="lib" path="D:/Eclipse_jar/easymock-3.2/easymock-3.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="D:/Eclipse_jar/easymock-3.2/easymock-3.2-samples.jar"/>
+	<classpathentry kind="lib" path="D:/Eclipse_jar/easymock-3.2/easymock-3.2-sources.jar"/>
+	<classpathentry kind="lib" path="D:/Eclipse_jar/easymock-3.2/easymock-3.2-tests.jar"/>
+	<classpathentry kind="lib" path="D:/Eclipse_jar/mockito-all-1.8.5.jar/mockito-all-1.8.5.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
